[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "boids"
authors = [{name = "Gregor Decristoforo", email = "gregor.decristoforo@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pygame",
    "numpy",
]

[project.urls]
Home = "https://github.com/gregordecristoforo/boids"
